--- a/css/style.css
+++ b/css/style.css
@@ -111,21 +111,29 @@ a {
 
 
 
+
+
+
 .article {
   border: #796742 solid 1px;
   border-radius: 10px;
   background-color: #ccbdaa;
 
   padding-bottom:0px;
+
+  max-height: 800px;
+  min-height: 300px;
 }
 
 .article img {
     width:80%;
     margin-top:25px;
-
     border-radius: 10px;
     border: #803962 solid 1px;
 }
+
+
+
 
 
 
@@ -339,6 +347,10 @@ footer a {
   }
 }
 @media screen and (max-width: 540px) {
+  .container-fluid{
+    margin-left:5vw;
+    margin-right:5vw;
+  }
   h1 {
     font-size: 3rem;
   }
