--- a/css/style-produit.css
+++ b/css/style-produit.css
@@ -1,8 +1,12 @@
+/* COMMUN */
 body{
-    margin-top:70px;
+    margin-top:120px;
     color:black;
+    font-size:1rem;
 }
-
+main{
+    margin-bottom:200px;
+}
 .container-fluid{
     margin:0;
     padding:0 -15px 0 -15px;
@@ -10,13 +14,38 @@ body{
 a {
     color: black;
 }
+h2 {
+    font-size:1.7rem;
+    color: #475a51;
+    font-weight: bold;
+    font-family: "Lobster", cursive;
+  }
+  
+h3 {
+  font-size: 1.2rem;
+  font-family: "Indie Flower", cursive;
+}
+
+article p{
+    margin-bottom:50px;
+}
+  
+  
+  
+
+
+
+
+
+
+
 
 
 
 /* Navigation */
 .navbar-brand {
     font-family: "Yellowtail", cursive;
-    font-size: 3rem;
+    font-size: 2rem;
     margin-left: 10px;
     color: #332206;
 }
@@ -33,26 +62,17 @@ a {
 }
 
 
-.btn-nav-bg {
-  background-color: rgba(117, 155, 68, 0.945);
-  margin-top: 0;
-  margin-bottom: 0;
-  padding-top: 12px;
-  padding-bottom: 12px;
-}
-.btn-nav-bg:hover {
-  background: #eeeeee;
-}
-.btn-nav-bg a {
-  text-decoration: none;
-}
+
 
 .collapse ul {
-  margin-right: 0px;
+    margin-right: 0px;
 }
 .collapse ul a {
-  font-size: 1.6rem;
+    font-size: 1.2rem;
 }
+
+
+
 
 
 
@@ -61,25 +81,24 @@ a {
 
 
 .btn-taille{
-    box-shadow: 2px 2px 5px grey ;
+    /* box-shadow: 2px 2px 5px grey ; */
     margin: 15px;
-    text-align: center;
+}
+.btn-panier{
+    margin-left:15px;
+    margin-top:15px;
+    margin-bottom:50px;
+}
+.btn-panier a{
+    color:white;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+h5 {
+    font-weight: bold;
+    color: #475a51;
+    margin-top: 25px;
+    margin-left: 10px;
+  }
 
 
 
@@ -93,10 +112,10 @@ a {
 
   /* FOOTER */
   
-footer {
+  footer {
     background-color: #dacec2;
-    padding: 20px;
-    margin-top:20px;
+    padding-left: 2vw;
+    padding-right:2vw;
   }
   footer ul, footer p {
     list-style: none;
@@ -105,7 +124,7 @@ footer {
   }
   footer .mention {
     text-align: center;
-    font-size: 1.2rem;
+    font-size: 0.8rem;
   }
   footer .social {
     padding-left: 10px;
@@ -118,6 +137,9 @@ footer {
     color: #656e68;
   }
   
+  
+
+
 
 
 
