--- a/css/style-confirm.css
+++ b/css/style-confirm.css
@@ -2,6 +2,9 @@ body{
     margin-top:100px;
     color:black;
 }
+main{
+    margin-bottom:250px;
+}
 section{
     margin-bottom:50px;
     margin-bottom:50px;
