--- a/css/style.css
+++ b/css/style.css
@@ -216,6 +216,8 @@ footer {
   background-color: #dacec2;
   padding-left: 2vw;
   padding-right:2vw;
+  width: 100%;
+  
 }
 footer ul, footer p {
   list-style: none;
@@ -255,8 +257,11 @@ footer a {
     background-color: rgba(117, 155, 68, 0.945);
   }
 }
-@media screen and (max-width: 540px) {
-  
+@media screen and (max-width: 574px) {
+  body{
+    margin-left:5vw;
+    margin-right:5vw;
+  }
   h1 {
     font-size: 3rem;
   }
@@ -271,6 +276,9 @@ footer a {
 
   article {
     width: 100% !important;
+  }
+  article img{
+    max-width:60vw;
   }
 
   footer {
