--- a/css/style-panier.css
+++ b/css/style-panier.css
@@ -24,6 +24,7 @@ a {
 
 h1{
     margin-bottom:30px;
+    text-shadow: 2px 2px 2px rgb(175, 175, 175);
 }
 
 h2{
@@ -46,10 +47,6 @@ h3{
 
 
 
-
-[required] {
-    border: 1px solid rgb(0, 0, 0);
-}
 
 
 
